# vstimd

./: .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/commands/: commit.md
.claude/skills/run-e2e-tests/: SKILL.md
.github/workflows/: ci.yml
.zed/: debug.json
client-python/: .gitignore  Makefile  pyproject.toml
client-python/compat/: check_compat.py
client-python/docs/: PYTHON_CLIENT.md
client-python/tests/: conftest.py  test_api_compat.py  test_commands.py  test_e2e_null.py  test_integration.py
client-python/wonderlamp/: __init__.py  _connection.py  exceptions.py
client-python/wonderlamp/_proto/: __init__.py
client-python/wonderlamp/psychopy/visual/: rect.py  window.py
client-python/wonderlamp/stimuli/: __init__.py  _client.py
client-python/wonderlamp/system/: _client.py  _models.py
client-python/wonderlamp/visual/: window.py
client-python/wonderlamp_client/: __init__.py  _colors.py  _commands.py  visual.py
client/matlab/: PLAN.md
client/python/: .gitignore  Makefile  README.md  make.ps1  pyproject.toml
client/python/docs/: PYTHON_CLIENT.md  conf.py  guide.md  index.md
client/python/docs/api/: animations.md  connection.md  index.md  psychopy.md  stimuli.md
client/python/examples/: flash_rects.py  interactive_grating.py  text_demo.py
client/python/tests/e2e/: _e2e_cases.py  _psychopy_visual_cases.py  conftest.py  test_e2e.py  test_e2e_null.py  test_psychopy_visual.py  test_psychopy_visual_null.py
client/python/tests/e2e/cases/: __init__.py  _helpers.py  test_animations.py  test_config.py  test_outline.py  test_shapes.py  test_shared.py  test_system.py  test_text.py  test_vtl.py
client/python/tests/e2e/psychopy_visual_cases/: __init__.py  _helpers.py  test_circle.py  test_grating.py  test_rect.py  test_text.py
client/python/tests/unit/: test_psychopy_compat.py
client/python/vstimd/: __init__.py  _connection.py  _handles.py  connection.py  exceptions.py  response.py
client/python/vstimd/_proto/: __init__.py
client/python/vstimd/animations/: __init__.py  _client.py  _models.py
client/python/vstimd/config/: __init__.py  config_client.py
client/python/vstimd/psychopy/: README.md
client/python/vstimd/psychopy/visual/: __init__.py  _colors.py  _types.py  _units.py  circle.py  grating.py  rect.py  text.py  window.py
client/python/vstimd/stimuli/: __init__.py  _client.py  _grating.py  _models.py  _shapes.py  _text.py  grating_client.py  grating_models.py  shapes_client.py  shapes_models.py  stimuli_client.py  stimuli_models.py  text_client.py  text_models.py
client/python/vstimd/system/: __init__.py  _client.py
client/python/vstimd/vtl/: _client.py
client/web/: .gitignore  PLAN.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
client/web/playwright/: smoke.spec.ts
client/web/src/: index.ts  system.ts
client/web/src/app/: App.tsx  VtlPanel.tsx
client/web/tests/: e2e.test.ts
debian/: changelog  control  postinst  postrm  rules  vstimd.service
dev/: vtl-plan.md
docs/: 3D_ROADMAP.md  BARE_METAL_LINUX.md  EGUI_OVERLAY_PLAN.md  EVENT_LOGGING.md  FRAME_TIMING.md  IMAGES_MOVIES_PLAN.md  INPUT_LATENCY.md  PLAN.md  POLYGON_SPLINE_PLAN.md  PYTHON_CLIENT.md  STIMULUS_DATA_MODEL.md  deploy.md  index.md
docs/api/python/: index.md  psychopy.md  stimuli.md
docs/concepts/: scene-serialization.md
docs/design/: multi-display.md
docs/protocol/: commands.md
gpiochip-daqd/: Cargo.toml  Makefile  Todo.md
gpiochip-daqd/config/: default-config.toml  jetson-orin-nano_in16_out4.toml
gpiochip-daqd/src/: config.rs  main.rs
jetson-daqd/: Cargo.toml  Todo.md
jetson-daqd/config/: jetson-daqd.toml
jetson-daqd/packaging/systemd/: jetson-daqd.service
jetson-daqd/src/: bridge.rs  main.rs
jetson-daqd/tests/: loopback.rs
jetsond-daqd/: Cargo.toml  Todo.md
jetsond-daqd/config/: jetsond-daqd.toml
jetsond-daqd/packaging/systemd/: jetsond-daqd.service
jetsond-daqd/src/: bridge.rs  main.rs
jetsond-daqd/tests/: loopback.rs
packaging/debian/: changelog  control  postinst  rules
packaging/docker/: Dockerfile.deb-builder
packaging/rpm/: vstimd.spec
packaging/systemd/: vstimd.service
proto/v1/: common.proto  service.proto  stimuli.proto  system.proto
proto/vstimd/v1/: animations.proto  common.proto  service.proto  stimuli_2d.proto  system.proto
proto/vstimd/v1/stimuli/: query.proto  text.proto
server/: Cargo.toml  build.rs
server/benches/: tess.rs
server/config/: default-rig-config.toml  jetson-orin-nano.toml  raspberry-pi-4.toml  raspberry-pi-5.toml
server/shaders/: grating.wgsl  solid.wgsl
server/src/: app.rs  io_config.rs  ipc.rs  lib.rs  main.rs  proto.rs  rig_config.rs  timing.rs  vtl_state.rs
server/src/render/: README.md  app_keys.rs  benchmark.rs  demo.rs  file_browser.rs  gpu_buffers.rs  mod.rs  overlay.rs  pipeline.rs  render_frame.rs  render_state.rs  render_target.rs  state.rs  system_metrics.rs  tess.rs  ui_renderer.rs  vertex.rs
server/src/render/drm/: display.rs  (+15 more)
server/src/scene/: animation.rs  command.rs  deferred.rs  mod.rs  photodiode.rs  scene_state.rs  state.rs  stimulus.rs
server/src/web/: mod.rs
server/tests/: animations.rs  commands.rs  config_roundtrip.rs  ipc.rs  rig_config.rs
src/: main.rs
tools/sdl-kmsdrm-test/: Makefile  sdl-kmsdrm-test.c
tools/timing_test/: pyproject.toml
tools/timing_test/tests/: test_analysis.py  test_report.py
tools/timing_test/vstim_timing_test/: __init__.py  __main__.py  analysis.py  cli.py  export.py  protocol.py
tools/timing_test/vstim_timing_test/backends/: base.py  labjack_t4.py  labjack_u3.py  ni.py  simulation.py
tools/timing_test/vstimd_timing_test/: __init__.py  __main__.py  cli.py  protocol.py  report.py
tools/timing_test/wonderlamp_timing_test/: __init__.py  __main__.py  cli.py  protocol.py
tools/timing_test/wonderlamp_timing_test/backends/: __init__.py  esp32.py
vstim_client/: pyproject.toml
vstim_client/tests/: test_commands.py
vstim_client/vstim_client/: __init__.py  _connection.py  _units.py  visual.py
vtl/: Cargo.toml
vtl/src/: layout.rs
(+41 files in other folders)
