[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wonderlamp_client"
version = "0.1.0"
description = "PsychoPy-compatible Python client for wonderlamp_server"
requires-python = ">=3.10"
dependencies = ["pyzmq>=25", "numpy>=1.24"]

[project.optional-dependencies]
test = ["pytest", "psychopy"]  # psychopy only needed for compat tests
dev  = ["wonderlamp_client[test]"]

[project.scripts]
wonderlamp-compat = "wonderlamp_client.compat.check_compat:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wonderlamp_client*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
