[package]
name        = "jetson-daqd"
version     = "0.1.0"
edition     = "2024"
description = "Jetson GPIO ↔ VTL trigger-line bridge daemon"
license     = "AGPL-3.0-only"
repository  = "https://github.com/braemons/vstimd"

# Compile with `--features hw-tests` to include loopback hardware tests.
# Requires two GPIO pins wired together; see tests/loopback.rs.
[lib]
name = "jetson_daqd"
path = "src/lib.rs"

[[bin]]
name = "jetson-daqd"
path = "src/main.rs"

[features]
hw-tests = []

[dependencies]
vtl        = { path = "../vtl", version = "0.1.0" }
gpio-cdev  = "0.6"
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"
libc      = "0.2"

[package.metadata.deb]
maintainer = "Joscha Schmiedt <joscha@schmiedt.dev>"
depends    = "$auto"
section    = "science"
priority   = "optional"
extended-description = """\
jetson-daqd bridges the VTL shared-memory trigger lines to physical Jetson \
GPIO pins.  Output lines (vstimd → GPIO) are polled at 1 kHz; input lines \
(GPIO → vstimd) use kernel edge-event blocking with no busy-wait.\
"""
assets = [
    ["target/release/jetson-daqd",               "usr/bin/jetson-daqd",                        "755"],
    ["config/jetson-daqd.toml",                  "etc/braemons/jetson-daqd/jetson-daqd.toml", "644"],
]
maintainer-scripts = "../packaging/debian/"

[package.metadata.deb.systemd-units]
unit-scripts = "packaging/systemd/"
