[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vstimd"
version = "0.1.0"
description = "Python client for vstimd (protobuf + ZMQ)"
requires-python = ">=3.12"
dependencies = [
    "pyzmq>=25",
    "protobuf>=5",
]

[dependency-groups]
# grpcio-tools bundles protoc and is required for `make proto`
dev = ["pytest>=8", "grpcio-tools>=1.62", "ty>=0.0.1a1"]

[tool.ty.src]
# Only check hand-written source; skip generated proto stubs.
include = ["vstimd"]
exclude = ["vstimd/_proto"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vstimd*"]
