[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vstimd"
version = "0.1.0"
description = "Python client for the vstimd visual stimulus server (ZMQ + protobuf)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Joscha Schmiedt", email = "joscha.schmiedt@gmail.com" },
]
keywords = [
    "psychopy",
    "visual-stimulus",
    "neuroscience",
    "vision-science",
    "zmq",
    "zeromq",
    "protobuf",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]
dependencies = [
    "pyzmq>=25",
    "protobuf>=5",
]

[project.urls]
Homepage = "https://github.com/brain-daemons/vstimd"
Repository = "https://github.com/brain-daemons/vstimd"
"Bug Tracker" = "https://github.com/brain-daemons/vstimd/issues"

[dependency-groups]
# grpcio-tools bundles protoc and is required for `make proto`
dev = [
    "pytest>=8",
    "grpcio-tools>=1.62",
    "ty>=0.0.1a1",
    "sphinx>=8",
    "myst-parser>=4",
    "furo>=2024",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=2",
]

[tool.ty.src]
# Only check hand-written source; skip generated proto stubs.
include = ["vstimd"]
exclude = ["vstimd/_proto"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vstimd*"]
