[project]
name = "wonderlamp_timing_test"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyzmq>=25", "numpy>=1.24", "colorama>=0.4"]

[project.optional-dependencies]
ni    = ["nidaqmx>=0.9"]
u3    = ["labjack>=2.0"]
t4    = ["labjack-ljm>=2022"]
all   = ["wonderlamp_timing_test[ni,u3,t4]"]
test  = ["pytest"]

[project.scripts]
wonderlamp-timing-test = "wonderlamp_timing_test.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
